<resources>
    <string name="app_name">Notes App</string>
    <string name="add">Add</string>
    <string name="notes">Notes</string>
    <string name="arrow_back">Arrow Back</string>
    <string name="save">Save</string>
    <string name="title">Title</string>
    <string name="description">Description</string>
    <string name="no_notes">No Notes</string>
    <string name="edit">Edit</string>
</resources>